# unihorario

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: App.tsx  Header.tsx  main.tsx
frontend/app/contexts/: useCatalog.tsx  useFilters.tsx  (+5 more)
frontend/public/: site.webmanifest
microservices/pdf-service/: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  README_TESTS.md  config.py  convert_pdfs.py  main.py  pyproject.toml  requirements.txt
microservices/pdf-service/alembic/: env.py
microservices/pdf-service/alembic/versions/: 05b7ba18fe8e_extend_year.py  54ae637fe308_catalog_career_dict_key_not_unique.py  5baf5beea04a_extend_year.py  a3c613356179_init_schema.py
microservices/pdf-service/json/: 1 - E.P. De Ingeniería De Sistemas.json
microservices/pdf-service/src/: data_transform.py  logger.py  models.py  services.py
microservices/pdf-service/src/models/: models.py
microservices/pdf-service/src/pdf_service/: main.py
microservices/pdf-service/src/pdf_service/core/: config.py  logger.py
microservices/pdf-service/src/pdf_service/domain/: data_transform.py  db.py  exceptions.py  mappers.py  models.py  orm_models.py  repositories.py  services.py  uow.py
microservices/pdf-service/src/tests/: README.md  conftest.py  conftests.py  test_api.py  test_e2e_api_db_flow.py  test_job_manager.py  test_mappers.py  test_parsing_logic.py  test_repositories_integration.py  test_smoke_api_db_flow.py
(+59 files in other folders)
