[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg>=0.31.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.13",
    "fastapi-cloud-cli==0.3.1",
    "fastapi[standard]==0.119.0",
    "gunicorn>=25.1.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==12.0.0",
    "psycopg>=3.3.3",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pypdfium2==4.30.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.1",
    "sentry-sdk==2.42.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.46",
    "starlette==0.48.0",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
